--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@paralleldrive/cuid2": "^2.2.0",
 		"@prisma/client": "^4.12.0",
+		"@types/node": "^18.15.11",
+		"cloudinary": "^1.35.0",
+		"dotenv": "^16.0.3",
 		"prisma": "^4.12.0",
 		"svelte-dnd-action": "^0.9.22"
 	}
