--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.301.0",
 		"@paralleldrive/cuid2": "^2.2.0",
 		"@prisma/client": "^4.12.0",
 		"@types/node": "^18.15.11",
-		"cloudinary": "^1.35.0",
 		"dotenv": "^16.0.3",
+		"image-resize": "^1.3.2",
 		"prisma": "^4.12.0",
 		"svelte-dnd-action": "^0.9.22"
 	}
